adicionando botão para cadastrar cliente

--- a/WebApp/Views/Cliente/Cadastro.cshtml
+++ b/WebApp/Views/Cliente/Cadastro.cshtml
@@ -20,7 +20,7 @@
                     <label>Endereço</label>
                     <input type="text" name="Endereco" class="form-control" />
                     <br />
-
+                    <button type="submit" class="btn btn-info">Cadastrar Cliente</button>
                 </form>
 
             </div>
