alteração da lista cliente

--- a/WebApp/Views/Cliente/Lista.cshtml
+++ b/WebApp/Views/Cliente/Lista.cshtml
@@ -60,7 +60,7 @@
                             <td>Campos Salles</td>
                             <td>
                                 <a href="/Cliente/Editar2" class="btn btn-warning">Editar</a>
-                                <a href="/Cliente/Excluir2" class=btn" btn-danger"Excluir></a>
+                                <a href="/Cliente/Excluir2" class="btn btn-danger"Excluir></a>
                             </td>
                         </tr>
                         
